--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>Capture-build</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Lobster&family=Oswald:wght@400;700&family=Poppins:ital,wght@0,500;0,700;1,500;1,600&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <div id="root"></div>
